; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_set_inode_entry.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_set_inode_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext4_xattr_item = type { i32, i32, i64 }
%struct.ext4_xattr_ibody_header = type { i32 }
%struct.ext4_xattr_entry = type { i32, i64, i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ext4_xattr_item*, %struct.ext4_xattr_ibody_header*, %struct.ext4_xattr_entry*, i8*)* @ext4_xattr_set_inode_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ext4_xattr_set_inode_entry(%struct.ext4_xattr_item* %0, %struct.ext4_xattr_ibody_header* %1, %struct.ext4_xattr_entry* %2, i8* %3) #0 {
  %5 = alloca %struct.ext4_xattr_item*, align 8
  %6 = alloca %struct.ext4_xattr_ibody_header*, align 8
  %7 = alloca %struct.ext4_xattr_entry*, align 8
  %8 = alloca i8*, align 8
  store %struct.ext4_xattr_item* %0, %struct.ext4_xattr_item** %5, align 8
  store %struct.ext4_xattr_ibody_header* %1, %struct.ext4_xattr_ibody_header** %6, align 8
  store %struct.ext4_xattr_entry* %2, %struct.ext4_xattr_entry** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %5, align 8
  %10 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.ext4_xattr_entry*, %struct.ext4_xattr_entry** %7, align 8
  %13 = getelementptr inbounds %struct.ext4_xattr_entry, %struct.ext4_xattr_entry* %12, i32 0, i32 4
  store i64 %11, i64* %13, align 8
  %14 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %5, align 8
  %15 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.ext4_xattr_entry*, %struct.ext4_xattr_entry** %7, align 8
  %18 = getelementptr inbounds %struct.ext4_xattr_entry, %struct.ext4_xattr_entry* %17, i32 0, i32 3
  store i32 %16, i32* %18, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = load %struct.ext4_xattr_ibody_header*, %struct.ext4_xattr_ibody_header** %6, align 8
  %21 = call i64 @EXT4_XATTR_IFIRST(%struct.ext4_xattr_ibody_header* %20)
  %22 = inttoptr i64 %21 to i8*
  %23 = ptrtoint i8* %19 to i64
  %24 = ptrtoint i8* %22 to i64
  %25 = sub i64 %23, %24
  %26 = trunc i64 %25 to i32
  %27 = call i32 @cpu_to_le16(i32 %26)
  %28 = load %struct.ext4_xattr_entry*, %struct.ext4_xattr_entry** %7, align 8
  %29 = getelementptr inbounds %struct.ext4_xattr_entry, %struct.ext4_xattr_entry* %28, i32 0, i32 2
  store i32 %27, i32* %29, align 8
  %30 = load %struct.ext4_xattr_entry*, %struct.ext4_xattr_entry** %7, align 8
  %31 = getelementptr inbounds %struct.ext4_xattr_entry, %struct.ext4_xattr_entry* %30, i32 0, i32 1
  store i64 0, i64* %31, align 8
  %32 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %5, align 8
  %33 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = call i32 @cpu_to_le32(i32 %34)
  %36 = load %struct.ext4_xattr_entry*, %struct.ext4_xattr_entry** %7, align 8
  %37 = getelementptr inbounds %struct.ext4_xattr_entry, %struct.ext4_xattr_entry* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 8
  ret void
}

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i64 @EXT4_XATTR_IFIRST(%struct.ext4_xattr_ibody_header*) #1

declare dso_local i32 @cpu_to_le32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
